[project]
name = "llm-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.6.0",
    "duckduckgo-search>=8.1.1",
    "grandalf>=0.8",
    "groq>=0.31.0",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "ipywidgets>=8.1.7",
    "langchain~=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.10",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langgraph>=0.6.10",
    "loguru>=0.7.3",
    "mlflow>=3.4.0",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
]
